ps-base/main/default/objects/Product2/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>Andriod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>