ps-base/main/default/objects/Product2/fields/Product_Feature__c.field-meta.xml
<CustomField>
    <fullName>Product_Feature__c</fullName>
    <label>Product Feature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>